// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generator should generate 1 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%player.counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%global.$$1%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 2 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "joinCounter",
        "quitCounter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%player.joinCounter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "joinCounter",
              "value": "%global.$$1%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%player.quitCounter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "quitCounter",
              "value": "%global.$$3%",
            },
          ],
          "event": "QUIT",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
        "$$3",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 3 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%player.counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%player.$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "3",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%player.$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$5",
              "value": "%player.$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
              "value": "4",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%player.$$5%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%player.$$6%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%global.$$7%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
        "$$7",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 4 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%player.counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "-1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%player.$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "4",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%player.$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$5",
              "value": "%player.$$4%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%global.$$5%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 5 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "3",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "%player.counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$2",
              "value": "%player.$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%player.$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$5",
              "value": "%player.$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
              "value": "4",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%player.$$5%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%player.$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$8",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$9",
              "value": "%player.$$7%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$9",
              "value": "%player.$$8%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%global.$$9%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
        "$$7",
        "$$8",
        "$$9",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 6 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "3",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "%player.counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$2",
              "value": "%player.$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%player.$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$5",
              "value": "%player.$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
              "value": "4",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%player.$$5%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%player.$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$8",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$9",
              "value": "%player.$$7%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$9",
              "value": "%player.$$8%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%player.$$9%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$10",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$11",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$12",
              "value": "%player.$x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$12",
              "value": "%player.$$11%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$13",
              "value": "%player.$$10%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$13",
              "value": "%player.$$12%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%global.$$13%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
        "$$7",
        "$$8",
        "$$9",
        "$$10",
        "$$11",
        "$$12",
        "$$13",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 7 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "0",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
              "value": "%player.$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$2",
              "value": "%player.$y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%player.$x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$3",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "0",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%player.$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$5",
              "value": "%player.$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%player.$$5%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%player.$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$8",
              "value": "%player.$$5%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$8",
              "value": "%player.$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$7",
              "value": "%player.$$8%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
              "value": "%player.$$7%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$y",
        "$$1",
        "$z",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
        "$$7",
        "$$8",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 8 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
              "value": "%player.$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%player.$x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%player.$y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "7",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$$3",
                  "value": "%player.$$4%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$5",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$5",
                  "value": "1",
                },
              ],
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$$5",
                  "value": "1",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$7",
                  "value": "20",
                },
                {
                  "kind": "CHANGE_GLOBAL_STAT",
                  "mode": "SET",
                  "stat": "counter",
                  "value": "%global.$$7%",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$6",
                  "value": "10",
                },
                {
                  "kind": "CHANGE_GLOBAL_STAT",
                  "mode": "SET",
                  "stat": "counter",
                  "value": "%global.$$6%",
                },
              ],
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$y",
        "$$1",
        "$z",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
        "$$7",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 9 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
              "value": "%player.$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "5",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$x",
                  "value": "%player.$$3%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$4",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$4",
                  "value": "1",
                },
              ],
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$$4",
                  "value": "1",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$6",
                  "value": "2",
                },
                {
                  "conditions": [
                    {
                      "kind": "PLAYER_STAT",
                      "mode": "EQUAL",
                      "stat": "$y",
                      "value": "%player.$$6%",
                    },
                  ],
                  "else": [
                    {
                      "kind": "CHANGE_PLAYER_STAT",
                      "mode": "SET",
                      "stat": "$$7",
                      "value": "0",
                    },
                  ],
                  "kind": "CONDITIONAL",
                  "matchAny": false,
                  "then": [
                    {
                      "kind": "CHANGE_PLAYER_STAT",
                      "mode": "SET",
                      "stat": "$$7",
                      "value": "1",
                    },
                  ],
                },
                {
                  "conditions": [
                    {
                      "kind": "PLAYER_STAT",
                      "mode": "EQUAL",
                      "stat": "$$7",
                      "value": "1",
                    },
                  ],
                  "else": [
                    {
                      "conditions": [
                        {
                          "kind": "PLAYER_STAT",
                          "mode": "EQUAL",
                          "stat": "$z",
                          "value": "1",
                        },
                      ],
                      "else": [
                        {
                          "kind": "CHANGE_PLAYER_STAT",
                          "mode": "SET",
                          "stat": "$$10",
                          "value": "40",
                        },
                        {
                          "kind": "CHANGE_GLOBAL_STAT",
                          "mode": "SET",
                          "stat": "counter",
                          "value": "%global.$$10%",
                        },
                      ],
                      "kind": "CONDITIONAL",
                      "matchAny": false,
                      "then": [
                        {
                          "kind": "CHANGE_PLAYER_STAT",
                          "mode": "SET",
                          "stat": "$$9",
                          "value": "30",
                        },
                        {
                          "kind": "CHANGE_GLOBAL_STAT",
                          "mode": "SET",
                          "stat": "counter",
                          "value": "%global.$$9%",
                        },
                      ],
                    },
                  ],
                  "kind": "CONDITIONAL",
                  "matchAny": false,
                  "then": [
                    {
                      "kind": "CHANGE_PLAYER_STAT",
                      "mode": "SET",
                      "stat": "$$8",
                      "value": "20",
                    },
                    {
                      "kind": "CHANGE_GLOBAL_STAT",
                      "mode": "SET",
                      "stat": "counter",
                      "value": "%global.$$8%",
                    },
                  ],
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$5",
                  "value": "10",
                },
                {
                  "kind": "CHANGE_GLOBAL_STAT",
                  "mode": "SET",
                  "stat": "counter",
                  "value": "%global.$$5%",
                },
              ],
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$y",
        "$$1",
        "$z",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
        "$$7",
        "$$8",
        "$$9",
        "$$10",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 10 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%player.$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
              "value": "%player.$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
              "value": "%player.$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "4",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "GREATER_THAN",
                  "stat": "$x",
                  "value": "%player.$$3%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$4",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$4",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "3",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "LESS_THAN",
                  "stat": "$y",
                  "value": "%player.$$5%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$6",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$6",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%player.$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%player.$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$8",
              "value": "%player.$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$8",
              "value": "%player.$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$7",
              "value": "%player.$$8%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "LESS_THAN_OR_EQUAL",
                  "stat": "$x",
                  "value": "%player.$y%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$9",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$9",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$10",
              "value": "%player.$$7%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$10",
              "value": "%player.$$9%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$11",
              "value": "%player.$$7%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$11",
              "value": "%player.$$9%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$10",
              "value": "%player.$$11%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "GREATER_THAN_OR_EQUAL",
                  "stat": "$x",
                  "value": "%player.$y%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$12",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$12",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$13",
              "value": "%player.$$10%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$13",
              "value": "%player.$$12%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$14",
              "value": "%player.$$10%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$14",
              "value": "%player.$$12%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$13",
              "value": "%player.$$14%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$x",
                  "value": "%player.$y%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$15",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$15",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$16",
              "value": "%player.$$13%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$16",
              "value": "%player.$$15%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$17",
              "value": "%player.$$13%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$17",
              "value": "%player.$$15%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$16",
              "value": "%player.$$17%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$x",
                  "value": "%player.$y%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$18",
                  "value": "1",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$18",
                  "value": "0",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$19",
              "value": "%player.$$16%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$19",
              "value": "%player.$$18%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$20",
              "value": "%player.$$16%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$20",
              "value": "%player.$$18%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$19",
              "value": "%player.$$20%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$$19",
                  "value": "1",
                },
              ],
              "else": [],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$21",
                  "value": "10",
                },
                {
                  "kind": "CHANGE_GLOBAL_STAT",
                  "mode": "SET",
                  "stat": "counter",
                  "value": "%global.$$21%",
                },
              ],
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$y",
        "$$1",
        "$z",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
        "$$7",
        "$$8",
        "$$9",
        "$$10",
        "$$11",
        "$$12",
        "$$13",
        "$$14",
        "$$15",
        "$$16",
        "$$17",
        "$$18",
        "$$19",
        "$$20",
        "$$21",
      ],
    },
  ],
  "kind": "module",
}
`;
